[REFACTOR] adjust functions to align with UUID type changes for userId and technicianId